# gravity-shield

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  asn_reputation.py  brands.py  classifier.py  config.py  daemon.py  domain_policy.py  ollama_client.py  pihole-ai.service.tpl  pihole_client.py  plan.md  popularity.py  pyproject.toml  rdap.py  requirements.txt  setup.sh  shared_hosting.py  state_db.py  syncer.py  threat_intel.py  tls_cert.py  watcher.py
features/: brand.py  dga.py  digits.py  entropy.py  extractor.py  hyphens.py  lexical.py  punycode.py  rules.py  tld.py
tests/: test_asn_reputation.py  test_brands.py  test_classifier.py  test_domain_policy.py  test_features.py  test_ollama_client.py  test_pihole_client.py  test_popularity.py  test_rdap.py  test_shared_hosting.py  test_state_db.py  test_syncer.py  test_threat_intel.py  test_tls_cert.py  test_watcher.py
tests/fixtures/: sample_feed.txt
